--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,6 +17,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    # Set up Java 17 JDK since the WPILib provided one isn't installed on this runner
+    # This will most likely change for a self-hosted runner
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
@@ -34,6 +41,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    # Set up Java 17 JDK since the WPILib provided one isn't installed on this runner
+    # This will most likely change for a self-hosted runner
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
