Update linter.yml to check whole codebase, mainly for testing
Changed the file to check the whole codebase, this is primarily for testing

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,14 +20,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        # Full git history is needed to get a proper list of changed files within `super-linter`
+        # Full git history is needed to get a proper list of changed files within 
+        # `super-linter`
         fetch-depth: 0
           
     - name: Lint Code Base
       uses: github/super-linter@v4
       # Update the environment here
       env:
-        VALIDATE_ALL_CODEBASE: false
+        # Update to false whenever all previous files have been linted successfully so we
+        # aren't checking the whole codebase each time
+        VALIDATE_ALL_CODEBASE: true
         # Add files or folders to exclude here
         FILTER_REGEX_EXCLUDE: ".*vendordeps/.*|.*gradlew|.*.gradle|.*WPILib-License.md.*"
         DEFAULT_BRANCH: "main"
